[package]
name = "nephila"
version = "0.1.0"
authors = ["Sacha <sacha.arbonel@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
propane = { git = "https://github.com/withoutboats/propane",branch = "master" }
async-std = { version = "1.6.2", features = ["attributes"] }
surf = "1.0.3"
futures = "0.3.5"
async-trait = "0.1.36"
erased-serde = "0.3.12"

